--- a/package.json
+++ b/package.json
@@ -29,5 +29,5 @@
     "url": "https://github.com/slavitto/diploma-angular-cafe/issues"
   },
   "homepage": "https://github.com/slavitto/diploma-angular-cafe",
-  "description": "<<<<<<< HEAD\r # KNOWN BUGS #\r * Press the button twice when you log in\r * Press \"Refresh\" to show actual orders in the Kitchen\r * Actually press twice everything if you can't see any changes\r =======\r # diploma-angular-cafe"
+  "description": ""
 }
